Issue #18765: Fixed Firefox scrollbar issue on assignment boxes.

--- a/source/less/screen.less
+++ b/source/less/screen.less
@@ -497,7 +497,7 @@ body {
 
 .xv-assignment-box {
   .xv-decorated-label {
-    width: 250px;  
+    width: 85%;  
   }
   .xv-label {
     width: 250px;  
